Features: user side dynamic products

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -362,7 +362,7 @@
   .items-container {
     margin-top: 3vh;
 
-    @apply lg:mx-28 mx-2 grid 2xl:grid-cols-6 xl:grid-cols-5 lg:grid-cols-4 sm:grid-cols-3 grid-cols-2 gap-4;
+    @apply lg:mx-28 mx-2 grid xl:grid-cols-5 lg:grid-cols-4 sm:grid-cols-3 grid-cols-2 gap-4;
   }
 
   .banner {
