--- a/client/src/ComponentsStyle.css
+++ b/client/src/ComponentsStyle.css
@@ -34,7 +34,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3; 
+    -webkit-line-clamp: 3;
 
     @apply md:text-base text-sm;
   }
@@ -87,11 +87,25 @@
   .card-title {
     font-family: var(--font2);
     line-height: 1.3rem !important;
+    /* hidden the text after 3 lines */
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
     @apply md:text-2xl text-lg;
   }
   .details {
     font-weight: 600;
-    line-height: 1rem !important;
+    line-height: .8rem !important;
+
+    /* hidden the text after 3 lines */
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+
     @apply md:text-base text-sm;
   }
   .price {
