--- a/client/src/App.css
+++ b/client/src/App.css
@@ -396,7 +396,7 @@
     line-height: 2rem;
     @apply mt-2 font-semibold max-sm:text-xl;
   }
-  
+
   .product-description {
     font-family: var(--font1);
     line-height: 1.6rem;
@@ -416,13 +416,13 @@
       color: white;
       letter-spacing: 1px;
       height: 2.5rem;
-      width:  8.5rem;
+      width: 8.5rem;
       border-radius: 10px;
       @apply max-sm:text-sm max-sm:w-28;
     }
   }
 
-  .badges{
+  .badges {
     font-family: var(--font1);
     font-size: 0.9rem;
     @apply basis-1/3;
@@ -602,12 +602,14 @@
 
   .product-data-container {
     height: 87vh;
-    @apply xl:basis-7/12 basis-11/12 mt-3 overflow-auto;
+    @apply mt-3 md:px-5 px-2 overflow-auto;
+    @apply xl:basis-8/12 basis-11/12;
   }
   .data-card {
+    display: flex;
     border-bottom: 2px solid var(--secondary1);
 
-    @apply flex-wrap-reverse p-2 mb-3;
+    @apply flex-wrap p-2 mb-3;
   }
 
   .icon {
@@ -616,12 +618,12 @@
   }
 
   .button {
+    display: flex;
     background-color: var(--secondary1);
     color: white;
-    height: 2.5rem;
-    width: 4rem;
     border-radius: 10px;
-    @apply m-1 max-sm:text-sm max-sm:h-7;
+    @apply h-10 w-16 m-1 items-center justify-center;
+    @apply max-sm:text-sm max-sm:h-7;
   }
 
   .modal {
