--- a/client/src/ComponentsStyle.css
+++ b/client/src/ComponentsStyle.css
@@ -22,6 +22,12 @@
   color: var(--secondary1);
 
   .card-title {
+    /* hidden the text after 2 lines */
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
     @apply md:text-xl text-base;
   }
 
@@ -29,14 +35,14 @@
     font-weight: 500;
     font-family: var(--font1);
 
-    /* hidden the text after 3 lines */
+    /* hidden the text after 2 lines */
     display: -webkit-box;
     text-overflow: ellipsis;
     overflow: hidden;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
 
-    @apply md:text-base text-sm;
+    @apply md:text-base text-sm overflow-hidden;
   }
 
   .card-price {
@@ -87,19 +93,20 @@
   .card-title {
     font-family: var(--font2);
     line-height: 1.3rem !important;
-    /* hidden the text after 3 lines */
+
+    /* hidden the text after 2 lines */
     display: -webkit-box;
     text-overflow: ellipsis;
     overflow: hidden;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
-    @apply md:text-2xl pb-2 text-lg;
+    @apply md:text-2xl text-lg;
   }
   .details {
     font-weight: 600;
-    line-height: .8rem !important;
+    line-height: 0.8rem !important;
 
-    /* hidden the text after 3 lines */
+    /* hidden the text after 1 lines */
     display: -webkit-box;
     text-overflow: ellipsis;
     overflow: hidden;
