--- a/client/src/App.css
+++ b/client/src/App.css
@@ -493,9 +493,18 @@
   }
 
   .p-img {
-    background-size: cover;
+    display: inline-block;
+    width: 9rem;
+    height: 9rem;
     text-align: center;
-    border-radius: 63px;
+    border-radius: 4.5rem;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
   .name {
     font-family: var(--font2);
