--- a/client/src/ComponentsStyle.css
+++ b/client/src/ComponentsStyle.css
@@ -125,12 +125,27 @@
 
 /* =========================== Carted Products ===========================*/
 .carted-products {
+  position: relative;
+  z-index: -1;
+  color: var(--secondary1);
+
   .card-title {
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
     @apply lg:text-lg md:text-base text-sm;
   }
 
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .card-body {
-    @apply py-4 ps-8;
+    @apply py-2 ps-2;
   }
   .details {
     font-family: var(--font1);
