carted-products: font adjusted

--- a/client/src/ComponentsStyle.css
+++ b/client/src/ComponentsStyle.css
@@ -150,7 +150,7 @@
   .details {
     font-family: var(--font1);
     font-weight: 600;
-    @apply lg:text-base text-xs;
+    @apply lg:text-base text-sm;
   }
 }
 
