--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,20 @@
   border-radius: 8px;
 }
 
+/*=================== Color Template =====================*/
+.color-2nd-1{
+  color: var(--secondary1);
+}
+.color-2nd-2{
+  color: var(--secondary2);
+}
+.bg-2nd-1{
+  background-color: var(--secondary1);
+}
+.bg-2nd-2{
+  background-color: var(--secondary2);
+}
+
 /*============================================================== Log in ==================================================*/
 .login-container {
   .flex {
