--- a/client/src/ComponentsStyle.css
+++ b/client/src/ComponentsStyle.css
@@ -57,11 +57,19 @@
 .order-card {
   position: relative;
   z-index: -1;
-
   line-height: 0.8rem;
+
+  @apply md:mx-12 mx-1 mb-5;
+
   .card-title {
     font-size: 1.5rem;
     font-family: var(--font2);
+
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
   }
   .card-title {
     font-size: 1.3rem;
@@ -69,13 +77,17 @@
   .details {
     font-weight: 600;
     font-size: 0.85rem;
+
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
   .price {
-    font-size: 1.2rem;
     text-align: end;
+    @apply font-semibold md:text-xl text-base;
   }
-
-  @apply md:mx-12 mx-0 mb-4;
 }
 
 /* =========================== Product Details ===========================*/
